some enhacment code

--- a/data/projects.json
+++ b/data/projects.json
@@ -69,15 +69,15 @@
   },
   {
     "name": "تطوير مواقع الويب",
-    "description": "تصيمم ",
-    "priority": "متوسطة",
-    "status": "مكتمل",
-    "startDate": "2025-06-12",
-    "endDate": "2025-07-01",
-    "budget": 11,
+    "description": "jjkdsf ",
+    "priority": "متوسطة ",
+    "status": "مكتمل ",
+    "startDate": "2025-06-18",
+    "endDate": "2025-07-07",
+    "budget": 8,
     "team": [],
     "progress": 0,
     "tasks": [],
-    "id": "1751087021520"
+    "id": "1751105586211"
   }
 ]
