--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-to-print": "^3.1.0",
     "recharts": "^3.0.0",
     "uuid": "^11.1.0"
   },
